# CebraEM

./: .gitignore  CebraNET_README.md  LICENSE  README.md  environment.yaml  install.bat  install.sh  test_installation.py
cebra-ann/: README.md  setup.cfg
cebra-ann/cebra_ann/: CebraANN  __init__.py  _data.py  _dialogs.py  _funcs.py  _multicut.py  _project.py  _widget.py  _widgets.py  napari.yaml  test.py
cebra-ann/deprecated/: setup.py
cebra-em/: README.md  build.md  pyproject.toml  setup.py
cebra-em-core/: pyproject.toml  setup.py
cebra-em-core/cebra_em_core/: __init__.py  cebra_em_project.py  cebra_net.py  project_handling.py  version.py
cebra-em-core/cebra_em_core/bioimageio/: cebra_net.py
cebra-em-core/cebra_em_core/common/: bdv_utils.py  config.py  configs.py  dependencies.py  mobie_utils.py  modules.py  params.py  piled_unets.py  project.py  run_models2.py  supervoxels.py  tasks.py  version.py
cebra-em-core/cebra_em_core/dataset/: alignment.py  bdv_utils.py  data.py  mobie_utils.py  preprocessing.py
cebra-em-core/cebra_em_core/deep_models/: piled_unets.py  run_models2.py
cebra-em-core/cebra_em_core/em_proj/params/: raw_defaults.json  segmentation_defaults.json  supervoxels_defaults.json
cebra-em-core/cebra_em_core/linux/: cuda.py  misc.py
cebra-em-core/cebra_em_core/misc/: cliutils.py  data.py
cebra-em-core/cebra_em_core/project_utils/: config.py  dependencies.py  gt.py  params.py  project.py  tasks.py
cebra-em-core/cebra_em_core/project_utils/params/: general_defaults.json  mask_defaults.json  membrane_prediction_defaults.json  raw_defaults.json  segmentation_defaults.json  supervoxels_defaults.json
cebra-em-core/cebra_em_core/segmentation/: elf_utils.py  multicut.py  stitching_utils.py  supervoxels.py
cebra-em-core/cebra_em_core/windows/: cuda.py  misc.py
cebra-em-core/tests/: test_dataset.py  test_supervoxels.py  test_workflow.py
cebra-em-core/tests/test_data/: mem00.npy  raw00.npy  sv00.npy  xcorr_on_volume00.npy
cebra-em/cebra_em/: __main__.py  prepare_snakefiles.py  run.py
cebra-em/cebra_em/cluster/slurm/: config.yaml
cebra-em/cebra_em/misc/: bdv_io.py  repo.py
cebra-em/cebra_em/run_scripts/: apply_mapping.py  find_mapping.py  predict_segmentation.py  run_extract_gt.py  run_membrane_prediction.py  run_multicut.py  run_quantile_norm.py  run_task.py  solve_mapping.py  train_segmentation.py
cebra-em/cebra_em/run_utils/: run_specs.py  tasks.py
cebra-em/cebra_em/snakefiles/: run_block.smk  run_main.smk  run_multicut.smk  stitch_segmentation.smk  train_segmentation.smk
test_data/: mito.h5  raw.h5
