# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "setuptools >=61",
    "setuptools_scm >=7",
]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for cebra_em's version
[project]
name = "cebra_em"
version = "0.0.2"
description = "Add short description here"
readme = "README.md"
maintainers = [
    { name = "Julian Hennies", email = "hennies@embl.de" },
]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "cebra_em_core",
    "click",
]

# Command line scripts installed as part of the installation
[project.scripts]
cebra_run = "cebra_em.run:run"
cebra = "cebra_em.__main__:cebra"

# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = [
    "cebra_em",
]
